for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: Your Name (web page or e-mail)
Date: yyyy/mm/dd hh:mm:ss
Tag: cvs-tag-for-this-change
Description:

Here is a test entry

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: yyyy/mm/dd
Description:


----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2012/10/01
Description:

*************************** Version 110.75 ***************************

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2012/09/21
Description:
Bug fix in ml-antlr to ensure that the generated toString function
for tokens is strictly legal SML code (i.e., non-printing characters
and UTF8 multibyte sequences are properly escaped).

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2012/09/11
Description:
Added getu function to ULexBuffer as a way to improve ulex performance.
This addition allows a fastpath for processing ascii characters, which
improved lexer performance by 3-4%.

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2012/08/02
Description:
Fixed bugs #89 and #96: Build Failure with Xcode 4.3
Also removed build support for MacOS X pre-10.5 (Leopard) on PPC and
pre-10.6 (Snow Leopard) on Intel.

----------------------------------------------------------------------
Name: John Reppy (http://cs.uchicago.edu/~jhr)
Date: 2012/02/05
Description:
Fixed bug #88.  The check for valid arcs on Unix systems now allows
any character other than slash or nul.

----------------------------------------------------------------------
Name: David MacQueen (dbm@cs.uchicago.edu)
Date: 2012/01/20
Description:
