@@ -33,7 +33,7 @@
 <br/>
                           Version 110.75 NEWS
 <br/>
-                           August 13, 2012
+                            October 1, 2012
 <br/>
 <br/>
 </b>
@@ -73,7 +73,14 @@ We expect that 110.75 will be the last release using the current version numberi
     <ul>
       <li>
 	Added <tt>subtract</tt>, <tt>subtract'</tt>, and <tt>subtractList</tt>
-        functions to <tt>ORD_SET</tt> interface and implementations.
+        functions to the <tt>ORD_SET</tt> interface and implementations.
+      </li>
+      <li>
+	Added <tt>all</tt> function to the <tt>ORD_SET</tt> interface and implementations.
+      </li>
+      <li>
+	Added <tt>exists</tt>, <tt>existsi</tt>, <tt>all</tt>, and <tt>alli</tt> functions
+	to the <tt>ORD_MAP</tt> interface and implementations.
       </li>
       <li>
 	Modified <tt>PathUtil</tt> module to handle the case where the filename is an
